--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "place-hunt",
   "version": "0.1.0",
-  "homepage": "https://ken840619.github.io/portfolio_2019",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
